--- a/Ketch/UserInterface/Game/GameView.xib
+++ b/Ketch/UserInterface/Game/GameView.xib
@@ -13,6 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController">
             <connections>
+                <outlet property="container" destination="a04-sX-EpL" id="C9s-1D-SpF"/>
                 <outlet property="dockBadge" destination="WOT-kB-qH2" id="vny-NG-Upp"/>
                 <outlet property="emptyView" destination="3wb-3s-b5F" id="qVb-27-wAu"/>
                 <outlet property="gameView" destination="iN0-l3-epB" id="79c-2I-iEU"/>
@@ -31,10 +32,18 @@
                         <constraint firstAttribute="width" secondItem="WOT-kB-qH2" secondAttribute="height" multiplier="1:1" id="ovM-Jm-iQ1"/>
                     </constraints>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a04-sX-EpL" userLabel="Container">
+                    <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.043137254899999998" green="0.8980392157" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="WOT-kB-qH2" firstAttribute="top" secondItem="dPb-pR-9as" secondAttribute="top" constant="15" id="5Gp-vA-vaP"/>
+                <constraint firstItem="a04-sX-EpL" firstAttribute="top" secondItem="dPb-pR-9as" secondAttribute="top" constant="60" id="JmF-6N-WbB"/>
+                <constraint firstItem="a04-sX-EpL" firstAttribute="leading" secondItem="dPb-pR-9as" secondAttribute="leading" id="Q1M-4C-Zvg"/>
+                <constraint firstAttribute="trailing" secondItem="a04-sX-EpL" secondAttribute="trailing" id="gDQ-5D-BkV"/>
+                <constraint firstAttribute="bottom" secondItem="a04-sX-EpL" secondAttribute="bottom" id="kfY-5d-q7u"/>
                 <constraint firstAttribute="trailing" secondItem="WOT-kB-qH2" secondAttribute="trailing" constant="20" id="tzx-eF-Zov"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -43,29 +52,29 @@
         </view>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="Game View" customClass="GameView" customModule="Ketch" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-anchor-white" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
-                    <rect key="frame" x="19" y="258" width="100" height="100"/>
+                    <rect key="frame" x="19" y="200" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-keep-white" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp" userLabel="Keep Slot">
-                    <rect key="frame" x="257" y="258" width="100" height="100"/>
+                    <rect key="frame" x="257" y="200" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-knot-white" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V" userLabel="Marry Slot">
-                    <rect key="frame" x="137" y="150" width="100" height="100"/>
+                    <rect key="frame" x="137" y="90" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Lu-FI-gAz" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="9" y="528" width="100" height="100"/>
+                    <rect key="frame" x="9" y="468" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k7t-mm-QgH" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="137" y="528" width="100" height="100"/>
+                    <rect key="frame" x="137" y="468" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-3L-EJd" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="267" y="528" width="100" height="100"/>
+                    <rect key="frame" x="267" y="468" width="100" height="100"/>
                 </imageView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMH-Ka-VtK" userLabel="Ready Prompt" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="75" y="410" width="224.5" height="107"/>
+                    <rect key="frame" x="75" y="320" width="224.5" height="107"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsh-wd-hgi" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="224.5" height="62"/>
@@ -106,11 +115,11 @@
             </subviews>
             <color key="backgroundColor" red="0.043137254901960784" green="0.89803921568627454" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="MMH-Ka-VtK" secondAttribute="centerY" constant="-130" id="BDE-DX-5xb"/>
+                <constraint firstAttribute="centerY" secondItem="MMH-Ka-VtK" secondAttribute="centerY" constant="-70" id="BDE-DX-5xb"/>
                 <constraint firstAttribute="centerX" secondItem="MMH-Ka-VtK" secondAttribute="centerX" id="Ebu-2F-eZF"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="maybeBucket" destination="u8F-ne-eBp" id="rAa-8l-slb"/>
                 <outlet property="noBucket" destination="o6p-MY-cjB" id="Rhx-YT-mL6"/>
@@ -123,7 +132,7 @@
             <point key="canvasLocation" x="420.5" y="158.5"/>
         </view>
         <view contentMode="scaleToFill" id="3wb-3s-b5F" userLabel="Empty View" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKG-EO-iuj" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
@@ -206,7 +215,7 @@ SAILED FOR TODAY.</string>
                 <constraint firstItem="CKG-EO-iuj" firstAttribute="centerX" secondItem="Uod-OD-wle" secondAttribute="centerX" id="q8Q-tU-gcZ"/>
                 <constraint firstAttribute="centerX" secondItem="CKG-EO-iuj" secondAttribute="centerX" id="scj-gf-RlG"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="830.5" y="158.5"/>
         </view>
     </objects>
