--- a/Ketch/UserInterface/Shared/KetchBackgroundView.xib
+++ b/Ketch/UserInterface/Shared/KetchBackgroundView.xib
@@ -16,6 +16,10 @@
                 <outlet property="dockButton" destination="jVx-li-RXQ" id="zvf-HY-T1N"/>
                 <outlet property="ketchIcon" destination="4BP-aI-ryy" id="81X-lM-J3V"/>
                 <outlet property="settingsButton" destination="WBN-hY-kOU" id="OT1-eO-fPH"/>
+                <outlet property="skyBackground" destination="w5V-VN-uAR" id="czi-nV-UD2"/>
+                <outlet property="skyBackgroundHeight" destination="6bh-Fu-QKg" id="WXX-LA-9Ky"/>
+                <outlet property="skyHeader" destination="ykW-YZ-J02" id="1PJ-35-JMg"/>
+                <outlet property="skyHeaderTopMargin" destination="kNj-U8-rpj" id="hgp-Bh-fs6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,7 +27,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Header" translatesAutoresizingMaskIntoConstraints="NO" id="ykW-YZ-J02">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5V-VN-uAR" userLabel="Sky Background">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                    <color key="backgroundColor" red="0.92941176470588238" green="0.97647058823529409" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="6bh-Fu-QKg"/>
+                    </constraints>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Header" translatesAutoresizingMaskIntoConstraints="NO" id="ykW-YZ-J02" userLabel="Sky Header">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="72.5"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="ykW-YZ-J02" secondAttribute="height" multiplier="160:31" id="NQR-ov-Yew"/>
@@ -64,9 +75,12 @@
             <color key="backgroundColor" red="0.043137254899999998" green="0.8980392157" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="ykW-YZ-J02" firstAttribute="leading" secondItem="rwt-zi-iy4" secondAttribute="leading" id="5Ug-YQ-xaC"/>
+                <constraint firstAttribute="trailing" secondItem="w5V-VN-uAR" secondAttribute="trailing" id="7C1-Qv-egK"/>
                 <constraint firstItem="WBN-hY-kOU" firstAttribute="leading" secondItem="rwt-zi-iy4" secondAttribute="leading" id="Aj1-Aw-2sa"/>
                 <constraint firstAttribute="trailing" secondItem="jVx-li-RXQ" secondAttribute="trailing" id="HJF-3N-ssl"/>
                 <constraint firstItem="4BP-aI-ryy" firstAttribute="bottom" secondItem="ykW-YZ-J02" secondAttribute="bottom" id="IbA-o4-dNG"/>
+                <constraint firstItem="w5V-VN-uAR" firstAttribute="top" secondItem="rwt-zi-iy4" secondAttribute="top" id="WVN-38-OMz"/>
+                <constraint firstItem="w5V-VN-uAR" firstAttribute="leading" secondItem="rwt-zi-iy4" secondAttribute="leading" id="XVS-of-DHB"/>
                 <constraint firstAttribute="trailing" secondItem="ykW-YZ-J02" secondAttribute="trailing" id="aQG-uS-uyK"/>
                 <constraint firstItem="ykW-YZ-J02" firstAttribute="top" secondItem="rwt-zi-iy4" secondAttribute="top" id="kNj-U8-rpj"/>
                 <constraint firstItem="4BP-aI-ryy" firstAttribute="centerX" secondItem="ykW-YZ-J02" secondAttribute="centerX" id="nSN-By-PaR"/>
