--- a/Ketch/UserInterface/Dock/ConnectionCell.xib
+++ b/Ketch/UserInterface/Dock/ConnectionCell.xib
@@ -9,49 +9,49 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="cAY-2f-1lU" customClass="ConnectionCell" customModule="Ketch" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cAY-2f-1lU" id="Ctw-G5-cnb">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLr-rA-szy" userLabel="New Indicator">
-                        <rect key="frame" x="179" y="8" width="12" height="12"/>
+                        <rect key="frame" x="49" y="8" width="12" height="12"/>
                         <color key="backgroundColor" red="0.95052570104598999" green="0.3660246729850769" blue="0.4469219446182251" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="12" id="5Lk-6t-c6d"/>
-                            <constraint firstAttribute="width" secondItem="rLr-rA-szy" secondAttribute="height" multiplier="1:1" id="Q1e-re-Ryw"/>
+                            <constraint firstAttribute="width" secondItem="rLr-rA-szy" secondAttribute="height" multiplier="1:1" id="QfL-tm-ieB"/>
+                            <constraint firstAttribute="width" constant="12" id="e3F-Dn-zhr"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                        <rect key="frame" x="179" y="8" width="53" height="53"/>
+                        <rect key="frame" x="8" y="8" width="53" height="53"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="2C2-G4-yXf" secondAttribute="height" multiplier="1:1" id="uEn-R9-C0u"/>
+                            <constraint firstAttribute="width" secondItem="2C2-G4-yXf" secondAttribute="height" multiplier="1:1" id="ldG-ki-jnS"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
-                        <rect key="frame" x="136.5" y="13.5" width="34.5" height="23.5"/>
+                        <rect key="frame" x="69" y="13" width="34.5" height="23.5"/>
                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                        <color key="textColor" red="0.078431372549019607" green="0.32156862745098042" blue="0.45490196078431372" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" red="0.078431372550000003" green="0.32156862749999998" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="last message they sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Last Message">
-                        <rect key="frame" x="47.5" y="37" width="123.5" height="14"/>
+                        <rect key="frame" x="69" y="36" width="123.5" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" red="0.13725490196078433" green="0.58823529411764708" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" red="0.13725490200000001" green="0.58823529409999997" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="top" secondItem="Ctw-G5-cnb" secondAttribute="topMargin" id="Axw-5s-0VT"/>
-                    <constraint firstItem="rLr-rA-szy" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="leading" id="Sqg-t0-xKL"/>
-                    <constraint firstItem="rLr-rA-szy" firstAttribute="top" secondItem="2C2-G4-yXf" secondAttribute="top" id="WNK-rN-HXw"/>
-                    <constraint firstItem="7rM-02-dZt" firstAttribute="trailing" secondItem="gpZ-bc-q3K" secondAttribute="trailing" id="YnG-6P-IIf"/>
-                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="top" secondItem="7rM-02-dZt" secondAttribute="bottom" id="cnm-YJ-bG2"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="7rM-02-dZt" secondAttribute="centerY" constant="10" id="gWu-mp-HD5"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="trailing" secondItem="Ctw-G5-cnb" secondAttribute="trailingMargin" id="j5q-LV-irt"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="7rM-02-dZt" secondAttribute="trailing" constant="8" id="oFN-hJ-knX"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="2C2-G4-yXf" secondAttribute="bottom" id="zU8-Bx-4Rw"/>
-                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ctw-G5-cnb" secondAttribute="leadingMargin" id="zha-wD-rx9"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="top" secondItem="Ctw-G5-cnb" secondAttribute="topMargin" id="0JU-Pe-hVg"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="trailing" secondItem="rLr-rA-szy" secondAttribute="trailing" id="43r-N9-nc0"/>
+                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="top" secondItem="7rM-02-dZt" secondAttribute="bottom" id="5Cg-jh-iMc"/>
+                    <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="gpZ-bc-q3K" secondAttribute="leading" id="5Rp-hE-mxL"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="Ctw-G5-cnb" secondAttribute="leadingMargin" id="7dQ-4I-RHi"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="top" secondItem="rLr-rA-szy" secondAttribute="top" id="Vnr-Wm-88B"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="2C2-G4-yXf" secondAttribute="bottom" id="YRV-UV-Mb3"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="gpZ-bc-q3K" secondAttribute="trailing" id="cvN-LA-UsB"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="7rM-02-dZt" secondAttribute="centerY" constant="10" id="gIy-eG-5d0"/>
+                    <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="8" id="nIe-LR-p7R"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -59,9 +59,9 @@
                 <outlet property="avatarView" destination="2C2-G4-yXf" id="mOB-uu-j3t"/>
                 <outlet property="nameLabel" destination="7rM-02-dZt" id="bwS-OI-mMN"/>
                 <outlet property="newIndicator" destination="rLr-rA-szy" id="Z5U-Ic-EaC"/>
-                <outlet property="subtitleLabel" destination="gpZ-bc-q3K" id="lSG-Vg-vv0"/>
+                <outlet property="subtitleLabel" destination="gpZ-bc-q3K" id="aHp-gh-eyY"/>
             </connections>
-            <point key="canvasLocation" x="118" y="443"/>
+            <point key="canvasLocation" x="25" y="443"/>
         </tableViewCell>
     </objects>
 </document>
