--- a/Ketch/UserInterface/Dock/ConnectionCell.xib
+++ b/Ketch/UserInterface/Dock/ConnectionCell.xib
@@ -5,6 +5,14 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="TransatTextLight.otf">
+            <string>TransatTextLight</string>
+        </mutableArray>
+        <mutableArray key="TransatTextMedium.otf">
+            <string>TransatTextMedium</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,43 +23,56 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLr-rA-szy" userLabel="New Indicator">
-                        <rect key="frame" x="49" y="8" width="12" height="12"/>
+                        <rect key="frame" x="62" y="8" width="15" height="15"/>
                         <color key="backgroundColor" red="0.95052570104598999" green="0.3660246729850769" blue="0.4469219446182251" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="rLr-rA-szy" secondAttribute="height" multiplier="1:1" id="QfL-tm-ieB"/>
-                            <constraint firstAttribute="width" constant="12" id="e3F-Dn-zhr"/>
+                            <constraint firstAttribute="width" constant="15" id="e3F-Dn-zhr"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                        <rect key="frame" x="8" y="8" width="53" height="53"/>
+                        <rect key="frame" x="20" y="8" width="53" height="53"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="2C2-G4-yXf" secondAttribute="height" multiplier="1:1" id="ldG-ki-jnS"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.082352941176470587" green="0.396078431372549" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
-                        <rect key="frame" x="69" y="13" width="34.5" height="23.5"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                        <rect key="frame" x="83" y="21" width="29" height="15"/>
+                        <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                         <color key="textColor" red="0.078431372550000003" green="0.32156862749999998" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="last message they sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Last Message">
-                        <rect key="frame" x="69" y="36" width="123.5" height="14"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <rect key="frame" x="83" y="40" width="116" height="12.5"/>
+                        <fontDescription key="fontDescription" name="TransatTextLight" family="Transat Text" pointSize="12"/>
                         <color key="textColor" red="0.13725490200000001" green="0.58823529409999997" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dock-separator" translatesAutoresizingMaskIntoConstraints="NO" id="zgS-Vm-KHC">
+                        <rect key="frame" x="0.0" y="68" width="320" height="1"/>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2C2-G4-yXf" firstAttribute="top" secondItem="Ctw-G5-cnb" secondAttribute="topMargin" id="0JU-Pe-hVg"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="trailing" secondItem="rLr-rA-szy" secondAttribute="trailing" id="43r-N9-nc0"/>
-                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="top" secondItem="7rM-02-dZt" secondAttribute="bottom" id="5Cg-jh-iMc"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="trailing" secondItem="rLr-rA-szy" secondAttribute="trailing" constant="-4" id="43r-N9-nc0"/>
+                    <constraint firstItem="gpZ-bc-q3K" firstAttribute="top" secondItem="7rM-02-dZt" secondAttribute="bottom" constant="4" id="5Cg-jh-iMc"/>
                     <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="gpZ-bc-q3K" secondAttribute="leading" id="5Rp-hE-mxL"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="Ctw-G5-cnb" secondAttribute="leadingMargin" id="7dQ-4I-RHi"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="leading" secondItem="Ctw-G5-cnb" secondAttribute="leadingMargin" constant="12" id="7dQ-4I-RHi"/>
+                    <constraint firstAttribute="bottom" secondItem="zgS-Vm-KHC" secondAttribute="bottom" id="AFT-M7-rLh"/>
                     <constraint firstItem="2C2-G4-yXf" firstAttribute="top" secondItem="rLr-rA-szy" secondAttribute="top" id="Vnr-Wm-88B"/>
+                    <constraint firstItem="zgS-Vm-KHC" firstAttribute="leading" secondItem="Ctw-G5-cnb" secondAttribute="leading" id="Y5H-L1-UjC"/>
                     <constraint firstAttribute="bottomMargin" secondItem="2C2-G4-yXf" secondAttribute="bottom" id="YRV-UV-Mb3"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="gpZ-bc-q3K" secondAttribute="trailing" id="cvN-LA-UsB"/>
-                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="7rM-02-dZt" secondAttribute="centerY" constant="10" id="gIy-eG-5d0"/>
-                    <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="8" id="nIe-LR-p7R"/>
+                    <constraint firstItem="2C2-G4-yXf" firstAttribute="centerY" secondItem="7rM-02-dZt" secondAttribute="centerY" constant="6" id="gIy-eG-5d0"/>
+                    <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="10" id="nIe-LR-p7R"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -64,4 +85,7 @@
             <point key="canvasLocation" x="25" y="443"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="dock-separator" width="320" height="1"/>
+    </resources>
 </document>
