--- a/Ketch/UserInterface/Dock/DockView.xib
+++ b/Ketch/UserInterface/Dock/DockView.xib
@@ -12,7 +12,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GradientBackgroundView" customModule="Ketch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -43,16 +43,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wgR-pc-Jsx">
-                    <rect key="frame" x="0.0" y="68" width="320" height="499.5"/>
+                    <rect key="frame" x="0.0" y="62" width="320" height="505.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="0.043137254899999998" green="0.8980392157" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="wgR-pc-Jsx" secondAttribute="trailing" id="1y7-2n-de3"/>
                 <constraint firstItem="qrU-Rh-vA5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7Wa-nQ-ckP"/>
                 <constraint firstItem="31S-EO-xOp" firstAttribute="top" secondItem="qrU-Rh-vA5" secondAttribute="top" constant="22" id="AIO-jZ-PnN"/>
+                <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="qrU-Rh-vA5" secondAttribute="bottom" id="Jap-4l-ox7"/>
                 <constraint firstItem="RLY-Pm-SQ2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MbF-B8-1yj"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="68" id="Rlo-xm-2uh"/>
                 <constraint firstAttribute="bottom" secondItem="wgR-pc-Jsx" secondAttribute="bottom" id="W6S-Om-K4r"/>
@@ -63,6 +64,11 @@
                 <constraint firstItem="qrU-Rh-vA5" firstAttribute="centerX" secondItem="31S-EO-xOp" secondAttribute="centerX" id="uyN-4o-REV"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="Rlo-xm-2uh"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="76" y="349"/>
         </view>
     </objects>
